Fix thread safety in SModel